--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -5,10 +5,14 @@
         <meta http-equiv="cache-control" content="no-cache" />
         <meta http-equiv="pragma" content="no-cache" />
         <meta name="keywords" content="matt collecutt, matt, collecutt, portfolio, developer, web developer, matthew collecutt" />
-        <meta name="description" content="Matt Collecutt's Personal website" />
+        <meta name="description" content="Matt Collecutts Personal portfolio software development and software engineer website" />
         <meta name="author" content="Matt Collecutt" />
         <meta name="copyright" content="&copy;" />
-        <meta name="robot" content="noindex, nofollow" />
+        <meta name="robot" content="index, follow" />
+        <meta name="og:title" property="og:title" content="Matt Collecutt">
+        <meta name="og:description" property="og:description" content="Matt Collecutts personal software developer website">
+        <meta name="og:image" property="og:image" content="{{ url_for('static', filename="images/me.jpg") }}" />
+        <meta name="og:url" property="og:url" content="http://mattcollecutt.com" />
 
         <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', filename="images/favicon.ico") }}" />
         <link rel="stylesheet" href="{{ url_for('static', filename="css/styles.css") }}" type="text/css">
